--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <section id="obras">
         <h2>Obras Principais</h2>
         <div class="imagens">
-            <img class="monalisa" src="/assets/Mona_Lisa,_by_Leonardo_da_Vinci,_from_C2RMF_retouched.jpg" alt="Monalisa" title="Monalisa">
+            <img class="monalisa" src="Mona_Lisa,_by_Leonardo_da_Vinci,_from_C2RMF_retouched.jpg" alt="Monalisa" title="Monalisa">
             <span class="monalisatexto">Esta pintura a óleo é famosa por seu enigmático sorriso e técnica de sfumato, que cria transições suaves entre as cores. Retrata uma mulher, acredita-se que seja Lisa Gherardini, e é uma das obras de arte mais reconhecidas do mundo.</span>
             
-            <img class="ultimaceia" src="/assets/Leonardo_da_Vinci_(1452-1519)_-_The_Last_Supper_(1495-1498).jpg" alt="Última Ceia" title="Última Ceia">
+            <img class="ultimaceia" src="Leonardo_da_Vinci_(1452-1519)_-_The_Last_Supper_(1495-1498).jpg" alt="Última Ceia" title="Última Ceia">
             <span class="descriçãoceia">Esta mural é uma representação da última refeição de Jesus com seus discípulos antes da crucificação. A obra é famosa por sua composição dramática e pela maneira como capta as reações dos discípulos ao anúncio da traição de Judas.</span>
 
-            <img class="vitruviano" src="/assets/leonardo-1.jpg" alt="Proporções do Corpo Humano" title="Proporções do Corpo Humano">
+            <img class="vitruviano" src="leonardo-1.jpg" alt="Proporções do Corpo Humano" title="Proporções do Corpo Humano">
             <span class="descriçãovitru">Este desenho é uma representação das proporções ideais do corpo humano, baseado nas descrições do arquiteto romano Vitruvius. Combina arte e ciência, simbolizando a busca de Leonardo pela harmonia e proporção.</span>
         </div>
     </section>
